--- a/package.json
+++ b/package.json
@@ -15,16 +15,12 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10",
     "autoprefixer": "10.4.20",
-    "postcss": "8.4.47"
+    "postcss": "8.4.47",
+    "@supabase/supabase-js": "^2.47.8"
   },
   "devDependencies": {
     "typescript": "5.6.2",
     "@types/react": "18.3.5",
     "@types/node": "20.14.12"
-  }
-}
-{
-  "dependencies": {
-    "@supabase/supabase-js": "^2.47.8"
   }
 }
