--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "18.3.1",
     "tailwindcss": "3.4.10",
     "autoprefixer": "10.4.20",
-    "postcss": "8.4.47"
+    "postcss": "8.4.47",
+    "@supabase/supabase-js": "2.45.4"
   },
   "devDependencies": {
     "typescript": "5.6.2",
