--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "tailwindcss -v >/dev/null 2>&1 || echo 'Tailwind will be installed via deps'"
+    "lint": "next lint || true"
   },
   "dependencies": {
     "next": "15.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "@supabase/supabase-js": "2.45.4",
     "tailwindcss": "3.4.10",
-    "autoprefixer": "10.4.20",
     "postcss": "8.4.47",
-    "@supabase/supabase-js": "2.45.4"
+    "autoprefixer": "10.4.20"
   },
   "devDependencies": {
     "typescript": "5.6.2",
